--- a/front-end/src/app/components/modules/header/header.component.html
+++ b/front-end/src/app/components/modules/header/header.component.html
@@ -7,6 +7,7 @@
       <input
         type="text"
         id="name_input"
+        [(ngModel)]="newUser.name" 
         class="form-control form-control-lg"
         placeholder="Nome:"
       />
@@ -16,6 +17,7 @@
       <input
         type="text"
         id="email_input"
+        [(ngModel)]="newUser.email" 
         class="form-control form-control-lg"
         placeholder="UserEmail@email.com"
       />
@@ -25,6 +27,7 @@
       <input
         type="text"
         id="phone_input"
+        [(ngModel)]="newUser.phone" 
         class="form-control form-control-lg"
         placeholder="(DDD) X XXXX-XXXX"
       />
