--- a/front-end/src/app/components/modules/users-table/users-table.component.html
+++ b/front-end/src/app/components/modules/users-table/users-table.component.html
@@ -8,7 +8,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let user of userList; let i = index">
+      <tr *ngFor="let user of userService.userList; let i = index">
         <td>{{ user.name }}</td>
         <td>{{ user.email }}</td>
         <td>{{ user.phone }}</td>
