Atualizando método PUT

--- a/front-end/src/app/components/modules/users-table/users-table.component.html
+++ b/front-end/src/app/components/modules/users-table/users-table.component.html
@@ -58,6 +58,7 @@
                 type="text"
                 id="name_input_edit"
                 class="form-control form-control-lg"
+                [(ngModel)]="editedUser.name"
               />
             </div>
             <div class="input">
@@ -66,6 +67,7 @@
                 type="text"
                 id="email_input_edit"
                 class="form-control form-control-lg"
+                [(ngModel)]="editedUser.email"
               />
             </div>
             <div class="input">
@@ -74,6 +76,7 @@
                 type="text"
                 id="phone_input_edit"
                 class="form-control form-control-lg"
+                [(ngModel)]="editedUser.phone"
               />
             </div>
           </div>
