--- a/front-end/src/app/components/modules/users-table/users-table.component.html
+++ b/front-end/src/app/components/modules/users-table/users-table.component.html
@@ -42,7 +42,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Editar Usuário</h1>
           <button
             type="button"
             class="btn-close"
